# Aetas

./: .gitignore  .gitmodules  .main.py.swp  .snake.py.swp  CMakeLists.txt  COMPILE.md  ai.py  depthai.py  dumbai.py  generate.sh  grad.py  hand.py  main.py  meta.sh  network.py  perfectai.py  plot.py  snake.py  snake_main.py  test.py  user.py
activations/: relu.py  sigmoid.py  tanh.py
genetic/: main.py
layers/: dense.py  input.py  output.py
losses/: softmax.py
resources/: line_of_best_fit.py  test.lua
src/: evaluation.hpp  genetic.hpp  initialization.hpp  main.cpp  mutation.hpp  recombination.hpp  replacement.hpp  selection.hpp  termination.hpp
src/script/: core.cpp  core.hpp  lua.cpp  lua.hpp  script.hpp
src/std/: array.hpp  std.hpp  sum.hpp  vector.hpp
src/util/: argparse.cpp  argparse.hpp  print.hpp  rand.cpp  rand.hpp  range.hpp  time.cpp  time.hpp  util.hpp
